--- a/lessons-solved/02B_Python_Basics_Part2_09_17_2025.ipynb
+++ b/lessons-solved/02B_Python_Basics_Part2_09_17_2025.ipynb
@@ -643,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "de2b6f52",
       "metadata": {
         "id": "de2b6f52",
@@ -755,17 +755,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c5209995",
       "metadata": {
-        "id": "c5209995"
+        "id": "c5209995",
+        "outputId": "a8b1e4a3-9557-47d2-d4bb-f131c5dc9c07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "final i = 2\n"
+          ]
+        }
+      ],
       "source": [
         "for i in range(8):\n",
         "  if i < 2:\n",
         "    continue\n",
-        "  if i < 4:\n",
+        "  if i > 4:\n",
         "    print('i =', i)\n",
         "    continue\n",
         "  break\n",
