made mistake in math_operations, oh no

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -39,6 +39,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "f897fa49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "2\n",
+      "21\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from my_module import add, subtract, multiply, divide\n",
+    "\n",
+    "print(add(5,3))\n",
+    "print(subtract(4,2))\n",
+    "print(multiply(3,7))\n",
+    "print(divide(10,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "71ee2833",
    "metadata": {},
